// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should not render invalid children 1`] = `
<List
  className={null}
  hasImages={false}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-16gj3o1"
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should not render without children 1`] = `
<List
  className={null}
  hasImages={false}
/>
`;

exports[`<List /> should render a child and add styles for list items with images 1`] = `
<List
  className={null}
  hasImages={true}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n css-1brrprg"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-1brrprg css-16gj3o1"
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;

exports[`<List /> should render with two children 1`] = `
<List
  className={null}
  hasImages={false}
>
  <List
    className={null}
  >
    <ul
      className={null}
    >
      <ListItem
        className="css-1nftllw css-1ym3l2n"
        isSelected={false}
        key="child-0/.0"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-1ym3l2n css-16gj3o1"
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-1nftllw"
        isSelected={false}
        key="child-1/.1"
      >
        <li
          className="css-1p5q8vq css-1nftllw css-16gj3o1"
        >
          <div
            className="css-1ckzvk7"
          >
            <Item
              className={null}
              image={null}
              isDisabled={false}
              isSelected={false}
              link={null}
              linkState={null}
              onClick={null}
              rightComponent={null}
              testId={null}
              title="List Item"
            >
              <Grid
                className="css-1qcr7hz"
                component="div"
                wrap={false}
              >
                <div
                  className="css-1qcr7hz css-h7r55a"
                >
                  <GridItem
                    className="css-10fxwvh"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="css-10fxwvh css-1gs0ko2"
                    >
                      List Item
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </Item>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</List>
`;
